// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`resolveConfig > should ignore minimal from the root and read local file 1`] = `
{
  "arazzo1Decorators": {},
  "arazzo1Preprocessors": {},
  "arazzo1Rules": {
    "criteria-unique": "warn",
    "no-criteria-xpath": "off",
    "no-x-security-scheme-name-in-workflow": "off",
    "no-x-security-scheme-name-without-openapi": "off",
    "parameters-unique": "error",
    "requestBody-replacements-unique": "warn",
    "respect-supported-versions": "off",
    "sourceDescription-name-unique": "error",
    "sourceDescription-type": "error",
    "sourceDescriptions-not-empty": "error",
    "step-onFailure-unique": "warn",
    "step-onSuccess-unique": "warn",
    "stepId-unique": "error",
    "workflow-dependsOn": "error",
    "workflowId-unique": "error",
    "x-security-scheme-required-values": "off",
  },
  "async2Decorators": {},
  "async2Preprocessors": {},
  "async2Rules": {
    "channels-kebab-case": "off",
    "info-contact": "off",
    "info-license-strict": "warn",
    "no-channel-trailing-slash": "off",
    "no-duplicated-tag-names": "warn",
    "no-required-schema-properties-undefined": "warn",
    "operation-operationId": "warn",
    "tag-description": "warn",
    "tags-alphabetical": "off",
  },
  "async3Decorators": {},
  "async3Preprocessors": {},
  "async3Rules": {
    "channels-kebab-case": "off",
    "info-contact": "off",
    "info-license-strict": "warn",
    "no-channel-trailing-slash": "off",
    "no-duplicated-tag-names": "warn",
    "no-required-schema-properties-undefined": "warn",
    "operation-operationId": "warn",
    "tag-description": "warn",
    "tags-alphabetical": "off",
  },
  "decorators": {},
  "oas2Decorators": {},
  "oas2Preprocessors": {},
  "oas2Rules": {
    "boolean-parameter-prefixes": "error",
    "info-contact": "off",
    "info-license": "warn",
    "info-license-strict": "warn",
    "no-ambiguous-paths": "warn",
    "no-duplicated-tag-names": "warn",
    "no-enum-type-mismatch": "error",
    "no-http-verbs-in-paths": "off",
    "no-identical-paths": "error",
    "no-invalid-parameter-examples": "off",
    "no-invalid-schema-examples": "off",
    "no-path-trailing-slash": "error",
    "no-required-schema-properties-undefined": "warn",
    "no-schema-type-mismatch": "warn",
    "operation-2xx-response": "off",
    "operation-4xx-response": "error",
    "operation-description": "error",
    "operation-operationId": "warn",
    "operation-operationId-unique": "error",
    "operation-operationId-url-safe": "error",
    "operation-parameters-unique": "error",
    "operation-singular-tag": "off",
    "operation-summary": "error",
    "operation-tag-defined": "off",
    "parameter-description": "off",
    "path-declaration-must-exist": "error",
    "path-http-verbs-order": "error",
    "path-not-include-query": "error",
    "path-parameters-defined": "error",
    "path-params-defined": "off",
    "path-segment-plural": "off",
    "paths-kebab-case": "off",
    "request-mime-type": "off",
    "required-string-property-missing-min-length": "off",
    "response-contains-header": "off",
    "response-contains-property": "off",
    "response-mime-type": "off",
    "scalar-property-missing-example": "off",
    "security-defined": "error",
    "spec-strict-refs": "off",
    "tag-description": "warn",
    "tags-alphabetical": "off",
  },
  "oas3_0Decorators": {},
  "oas3_0Preprocessors": {},
  "oas3_0Rules": {
    "array-parameter-serialization": "off",
    "boolean-parameter-prefixes": "error",
    "component-name-unique": "off",
    "info-contact": "off",
    "info-license": "warn",
    "info-license-strict": "warn",
    "no-ambiguous-paths": "warn",
    "no-duplicated-tag-names": "warn",
    "no-empty-servers": "error",
    "no-enum-type-mismatch": "error",
    "no-example-value-and-externalValue": "error",
    "no-http-verbs-in-paths": "off",
    "no-identical-paths": "error",
    "no-invalid-media-type-examples": {
      "allowAdditionalProperties": false,
      "severity": "error",
    },
    "no-invalid-parameter-examples": "off",
    "no-invalid-schema-examples": "off",
    "no-path-trailing-slash": "error",
    "no-required-schema-properties-undefined": "warn",
    "no-schema-type-mismatch": "warn",
    "no-server-example.com": "warn",
    "no-server-trailing-slash": "error",
    "no-server-variables-empty-enum": "error",
    "no-undefined-server-variable": "error",
    "no-unused-components": "warn",
    "nullable-type-sibling": "error",
    "operation-2xx-response": "off",
    "operation-4xx-problem-details-rfc7807": "off",
    "operation-4xx-response": "error",
    "operation-description": "error",
    "operation-operationId": "warn",
    "operation-operationId-unique": "error",
    "operation-operationId-url-safe": "error",
    "operation-parameters-unique": "error",
    "operation-singular-tag": "off",
    "operation-summary": "error",
    "operation-tag-defined": "off",
    "parameter-description": "off",
    "path-declaration-must-exist": "error",
    "path-http-verbs-order": "error",
    "path-not-include-query": "error",
    "path-parameters-defined": "error",
    "path-params-defined": "off",
    "path-segment-plural": "off",
    "paths-kebab-case": "off",
    "request-mime-type": "off",
    "required-string-property-missing-min-length": "off",
    "response-contains-header": "off",
    "response-contains-property": "off",
    "response-mime-type": "off",
    "scalar-property-missing-example": "off",
    "security-defined": "error",
    "spec-components-invalid-map-name": "error",
    "spec-strict-refs": "off",
    "tag-description": "warn",
    "tags-alphabetical": "off",
  },
  "oas3_1Decorators": {},
  "oas3_1Preprocessors": {},
  "oas3_1Rules": {
    "array-parameter-serialization": "off",
    "boolean-parameter-prefixes": "error",
    "component-name-unique": "off",
    "info-contact": "off",
    "info-license": "warn",
    "info-license-strict": "warn",
    "no-ambiguous-paths": "warn",
    "no-duplicated-tag-names": "warn",
    "no-empty-servers": "error",
    "no-enum-type-mismatch": "error",
    "no-example-value-and-externalValue": "error",
    "no-http-verbs-in-paths": "off",
    "no-identical-paths": "error",
    "no-invalid-media-type-examples": "error",
    "no-invalid-parameter-examples": "off",
    "no-invalid-schema-examples": "off",
    "no-path-trailing-slash": "error",
    "no-required-schema-properties-undefined": "warn",
    "no-schema-type-mismatch": "warn",
    "no-server-example.com": "warn",
    "no-server-trailing-slash": "error",
    "no-server-variables-empty-enum": "error",
    "no-undefined-server-variable": "error",
    "no-unused-components": "warn",
    "operation-2xx-response": "off",
    "operation-4xx-problem-details-rfc7807": "off",
    "operation-4xx-response": "error",
    "operation-description": "error",
    "operation-operationId": "warn",
    "operation-operationId-unique": "error",
    "operation-operationId-url-safe": "error",
    "operation-parameters-unique": "error",
    "operation-singular-tag": "off",
    "operation-summary": "error",
    "operation-tag-defined": "off",
    "parameter-description": "off",
    "path-declaration-must-exist": "error",
    "path-http-verbs-order": "error",
    "path-not-include-query": "error",
    "path-parameters-defined": "error",
    "path-params-defined": "off",
    "path-segment-plural": "off",
    "paths-kebab-case": "off",
    "request-mime-type": "off",
    "required-string-property-missing-min-length": "off",
    "response-contains-header": "off",
    "response-contains-property": "off",
    "response-mime-type": "off",
    "scalar-property-missing-example": "off",
    "security-defined": "error",
    "spec-components-invalid-map-name": "error",
    "spec-strict-refs": "off",
    "tag-description": "warn",
    "tags-alphabetical": "off",
  },
  "overlay1Decorators": {},
  "overlay1Preprocessors": {},
  "overlay1Rules": {
    "info-contact": "off",
  },
  "preprocessors": {},
  "root": "some/path",
  "rules": {
    "boolean-parameter-prefixes": "error",
    "local/operation-id-not-test": "error",
    "no-invalid-media-type-examples": "error",
    "no-unresolved-refs": "error",
    "operation-2xx-response": "off",
    "operation-4xx-response": "error",
    "operation-description": "error",
    "path-http-verbs-order": "error",
    "struct": "error",
  },
}
`;

exports[`resolveConfig > should resolve extends with local file config which contains path to nested config 1`] = `
[
  {
    "absolutePath": ".../fixtures/resolve-config/api/plugin.js",
    "configs": {
      "all": {
        "rules": {
          "boolean-parameter-prefixes": "error",
          "local/operation-id-not-test": "error",
        },
      },
    },
    "decorators": {
      "oas3": {
        "test-plugin-nested/inject-x-stats": [Function],
      },
    },
    "id": "test-plugin-nested",
    "path": ".../fixtures/resolve-config/api/plugin.js",
    "preprocessors": {
      "oas2": {
        "test-plugin-nested/description-preprocessor": [Function],
      },
    },
    "rules": {
      "oas3": {
        "test-plugin-nested/openid-connect-url-well-known": [Function],
      },
    },
  },
  {
    "absolutePath": ".../fixtures/resolve-config/plugin.js",
    "assertions": {
      "checkWordsCount": [Function],
    },
    "configs": {
      "all": {
        "rules": {
          "boolean-parameter-prefixes": "error",
          "local/operation-id-not-test": "error",
        },
      },
    },
    "decorators": {
      "oas3": {
        "test-plugin/inject-x-stats": [Function],
      },
    },
    "id": "test-plugin",
    "path": ".../fixtures/resolve-config/plugin.js",
    "preprocessors": {
      "oas2": {
        "test-plugin/description-preprocessor": [Function],
      },
    },
    "rules": {
      "oas3": {
        "test-plugin/openid-connect-url-well-known": [Function],
      },
    },
  },
]
`;

exports[`resolveConfig > should resolve extends with local file config which contains path to nested config 2`] = `
{
  "arazzo1Decorators": {},
  "arazzo1Preprocessors": {},
  "arazzo1Rules": {
    "criteria-unique": "warn",
    "no-criteria-xpath": "off",
    "no-x-security-scheme-name-in-workflow": "off",
    "no-x-security-scheme-name-without-openapi": "off",
    "parameters-unique": "error",
    "requestBody-replacements-unique": "warn",
    "respect-supported-versions": "off",
    "sourceDescription-name-unique": "error",
    "sourceDescription-type": "error",
    "sourceDescriptions-not-empty": "error",
    "step-onFailure-unique": "warn",
    "step-onSuccess-unique": "warn",
    "stepId-unique": "error",
    "workflow-dependsOn": "error",
    "workflowId-unique": "error",
    "x-security-scheme-required-values": "off",
  },
  "async2Decorators": {},
  "async2Preprocessors": {},
  "async2Rules": {
    "channels-kebab-case": "off",
    "info-contact": "off",
    "info-license-strict": "warn",
    "no-channel-trailing-slash": "off",
    "no-duplicated-tag-names": "warn",
    "no-required-schema-properties-undefined": "warn",
    "operation-operationId": "warn",
    "tag-description": "warn",
    "tags-alphabetical": "off",
  },
  "async3Decorators": {},
  "async3Preprocessors": {},
  "async3Rules": {
    "channels-kebab-case": "off",
    "info-contact": "off",
    "info-license-strict": "warn",
    "no-channel-trailing-slash": "off",
    "no-duplicated-tag-names": "warn",
    "no-required-schema-properties-undefined": "warn",
    "operation-operationId": "warn",
    "tag-description": "warn",
    "tags-alphabetical": "off",
  },
  "decorators": {},
  "oas2Decorators": {},
  "oas2Preprocessors": {},
  "oas2Rules": {
    "boolean-parameter-prefixes": "error",
    "info-contact": "off",
    "info-license": "warn",
    "info-license-strict": "warn",
    "no-ambiguous-paths": "warn",
    "no-duplicated-tag-names": "warn",
    "no-enum-type-mismatch": "error",
    "no-http-verbs-in-paths": "off",
    "no-identical-paths": "error",
    "no-invalid-parameter-examples": "off",
    "no-invalid-schema-examples": "off",
    "no-path-trailing-slash": "error",
    "no-required-schema-properties-undefined": "warn",
    "no-schema-type-mismatch": "warn",
    "operation-2xx-response": "error",
    "operation-4xx-response": "off",
    "operation-description": "off",
    "operation-operationId": "warn",
    "operation-operationId-unique": "error",
    "operation-operationId-url-safe": "error",
    "operation-parameters-unique": "error",
    "operation-singular-tag": "off",
    "operation-summary": "error",
    "operation-tag-defined": "off",
    "parameter-description": "off",
    "path-declaration-must-exist": "error",
    "path-http-verbs-order": "off",
    "path-not-include-query": "error",
    "path-parameters-defined": "error",
    "path-params-defined": "off",
    "path-segment-plural": "off",
    "paths-kebab-case": "off",
    "request-mime-type": "off",
    "required-string-property-missing-min-length": "off",
    "response-contains-header": "off",
    "response-contains-property": "off",
    "response-mime-type": "off",
    "scalar-property-missing-example": "off",
    "security-defined": "error",
    "spec-strict-refs": "off",
    "tag-description": "warn",
    "tags-alphabetical": "off",
  },
  "oas3_0Decorators": {},
  "oas3_0Preprocessors": {},
  "oas3_0Rules": {
    "array-parameter-serialization": "off",
    "boolean-parameter-prefixes": "error",
    "component-name-unique": "off",
    "info-contact": "off",
    "info-license": "warn",
    "info-license-strict": "warn",
    "no-ambiguous-paths": "warn",
    "no-duplicated-tag-names": "warn",
    "no-empty-servers": "error",
    "no-enum-type-mismatch": "error",
    "no-example-value-and-externalValue": "error",
    "no-http-verbs-in-paths": "off",
    "no-identical-paths": "error",
    "no-invalid-media-type-examples": {
      "allowAdditionalProperties": false,
      "severity": "warn",
    },
    "no-invalid-parameter-examples": "off",
    "no-invalid-schema-examples": "off",
    "no-path-trailing-slash": "error",
    "no-required-schema-properties-undefined": "warn",
    "no-schema-type-mismatch": "warn",
    "no-server-example.com": "warn",
    "no-server-trailing-slash": "error",
    "no-server-variables-empty-enum": "error",
    "no-undefined-server-variable": "error",
    "no-unused-components": "warn",
    "nullable-type-sibling": "error",
    "operation-2xx-response": "error",
    "operation-4xx-problem-details-rfc7807": "off",
    "operation-4xx-response": "off",
    "operation-description": "off",
    "operation-operationId": "warn",
    "operation-operationId-unique": "error",
    "operation-operationId-url-safe": "error",
    "operation-parameters-unique": "error",
    "operation-singular-tag": "off",
    "operation-summary": "error",
    "operation-tag-defined": "off",
    "parameter-description": "off",
    "path-declaration-must-exist": "error",
    "path-http-verbs-order": "off",
    "path-not-include-query": "error",
    "path-parameters-defined": "error",
    "path-params-defined": "off",
    "path-segment-plural": "off",
    "paths-kebab-case": "off",
    "request-mime-type": "off",
    "required-string-property-missing-min-length": "off",
    "response-contains-header": "off",
    "response-contains-property": "off",
    "response-mime-type": "off",
    "scalar-property-missing-example": "off",
    "security-defined": "error",
    "spec-components-invalid-map-name": "error",
    "spec-strict-refs": "off",
    "tag-description": "warn",
    "tags-alphabetical": "off",
  },
  "oas3_1Decorators": {},
  "oas3_1Preprocessors": {},
  "oas3_1Rules": {
    "array-parameter-serialization": "off",
    "boolean-parameter-prefixes": "error",
    "component-name-unique": "off",
    "info-contact": "off",
    "info-license": "warn",
    "info-license-strict": "warn",
    "no-ambiguous-paths": "warn",
    "no-duplicated-tag-names": "warn",
    "no-empty-servers": "error",
    "no-enum-type-mismatch": "error",
    "no-example-value-and-externalValue": "error",
    "no-http-verbs-in-paths": "off",
    "no-identical-paths": "error",
    "no-invalid-media-type-examples": "warn",
    "no-invalid-parameter-examples": "off",
    "no-invalid-schema-examples": "off",
    "no-path-trailing-slash": "error",
    "no-required-schema-properties-undefined": "warn",
    "no-schema-type-mismatch": "warn",
    "no-server-example.com": "warn",
    "no-server-trailing-slash": "error",
    "no-server-variables-empty-enum": "error",
    "no-undefined-server-variable": "error",
    "no-unused-components": "warn",
    "operation-2xx-response": "error",
    "operation-4xx-problem-details-rfc7807": "off",
    "operation-4xx-response": "off",
    "operation-description": "off",
    "operation-operationId": "warn",
    "operation-operationId-unique": "error",
    "operation-operationId-url-safe": "error",
    "operation-parameters-unique": "error",
    "operation-singular-tag": "off",
    "operation-summary": "error",
    "operation-tag-defined": "off",
    "parameter-description": "off",
    "path-declaration-must-exist": "error",
    "path-http-verbs-order": "off",
    "path-not-include-query": "error",
    "path-parameters-defined": "error",
    "path-params-defined": "off",
    "path-segment-plural": "off",
    "paths-kebab-case": "off",
    "request-mime-type": "off",
    "required-string-property-missing-min-length": "off",
    "response-contains-header": "off",
    "response-contains-property": "off",
    "response-mime-type": "off",
    "scalar-property-missing-example": "off",
    "security-defined": "error",
    "spec-components-invalid-map-name": "error",
    "spec-strict-refs": "off",
    "tag-description": "warn",
    "tags-alphabetical": "off",
  },
  "overlay1Decorators": {},
  "overlay1Preprocessors": {},
  "overlay1Rules": {
    "info-contact": "off",
  },
  "preprocessors": {},
  "rules": {
    "assertions": [
      {
        "assertionId": "rule/path-item-get-defined",
        "assertions": {
          "defined": true,
        },
        "message": "Every path item must have a GET operation.",
        "subject": {
          "property": "get",
          "type": "PathItem",
        },
      },
      {
        "assertionId": "rule/tag-description",
        "assertions": {
          "minLength": 13,
          "pattern": "/\\.$/",
        },
        "message": "Tag description must be at least 13 characters and end with a full stop.",
        "severity": "error",
        "subject": {
          "property": "description",
          "type": "Tag",
        },
      },
    ],
    "boolean-parameter-prefixes": "error",
    "local/operation-id-not-test": "error",
    "no-invalid-media-type-examples": "warn",
    "no-unresolved-refs": "error",
    "operation-2xx-response": "error",
    "operation-4xx-response": "off",
    "struct": "error",
  },
}
`;
